# gwaei

./: .gitignore  ChangeLog  Makefile.am  NEWS  README  autogen.sh  configure-debug  configure.ac
mingw/: settings.ini
po/: ChangeLog  POTFILES.in  cs.po  de.po  es.po  fr.po  it.po  ja.po  tr.po  vi.po
src/: Makefile.am
src/desktop/: gwaei.desktop.in
src/gwaei/: Makefile.am  addvocabularywindow-callbacks.c  addvocabularywindow.c  application-callbacks.c  application-menumodel-gnome.ui  application-menumodel-macosx.ui  application-menumodel.ui  application.c  dictionaryinstallwindow-callbacks.c  dictionaryinstallwindow.c  dictionaryinstallwindow.ui  dictionarylist-callbacks.c  dictionarylist.c  dictionarystore-callbacks.c  dictionarystore.c  flashcardstore.c  flashcardwindow-callbacks.c  flashcardwindow.c  flashcardwindow.ui  gwaei-valgrind.sh  gwaei.c  history.c  historymodel.c  installprogresswindow-callbacks.c  installprogresswindow.c  kanjipad-candidatearea.c  kanjipad-drawingarea.c  kanjipadwindow-callbacks.c  kanjipadwindow.c  matchwindow.c  matchwindow.ui  printing.c  radicalswindow-callbacks.c  radicalswindow.c  radicalswindow.ui  search-data.c  search.c  searchwindow-callbacks.c  searchwindow-menumodel-button.ui  searchwindow-menumodel-gnome.ui  (+22 more)
src/gwaei/include/gwaei/: Makefile.am  application-callbacks.h  application-private.h  application.h  dictionaryinstallwindow-private.h  dictionarylist-callbacks.h  dictionarystore-private.h  dictionarystore.h  flashcardstore-private.h  flashcardstore.h  flashcardwindow-callbacks.h  flashcardwindow-private.h  flashcardwindow.h  gwaei.h  installprogresswindow-private.h  matchwindow-private.h  matchwindow.h  radicalswindow-private.h  searchwindow-callbacks.h  searchwindow-private.h  searchwindow.h  settingswindow-private.h  spellcheck-callbacks.h  spellcheck-private.h  spellcheck.h  vocabularyliststore-private.h  vocabularyliststore.h  vocabularywindow-callbacks.h  vocabularywindow-private.h  vocabularywindow.h  vocabularywordstore.h  window-callbacks.h  window-private.h  window.h
src/kpengine/: Makefile.am
src/libedictidx/: .gitignore  Makefile.am  Makefile.dev  autogen.sh  build.c  configure.ac  edictidx.c  edictidx.h  edictidx_int.h  fileops.c  hash.c  key.c  mmap-posix.c  mmap-stdio.c  parser.c  query.c  splint_library.h  verify.c
src/libedictidx/docs/: Doxyfile.in
src/libedictidx/tests/: checkindex.pl  cleantests  mkdict.pl  runtests  runtests.sh  tests.c
src/libwaei/: Makefile.am  dictinfo.c  dictinfolist.c  dictinst.c  dictinstlist.c  dictionary-callbacks.c  dictionary-installer.c  dictionary.c  dictionarylist.c  edictinfo.c  edictionary.c  engine-data.c  engine.c  exampledictionary.c  history.c  installdictionary.c  installdictionarylist.c  io.c  kanjidictionary.c  libwaei.c  morphology.c  preferences.c  query.c  queryline.c  range.c  regex.c  regexgroup.c  regroup.c  result.c  resultline.c  search.c  searchitem.c  unknowndictinfo.c  unknowndictionary.c  utilities.c  vocabulary.c  vocabularyitem.c  vocabularylist.c
src/libwaei/include/libwaei/: Makefile.am  definitions.h  dictinfo-private.h  dictinfo.h  dictinfolist.h  dictinst.h  dictionary-callbacks.h  dictionary-installer.h  dictionary-private.h  dictionary.h  dictionarylist.h  edictinfo.h  edictionary.h  engine-data.h  engine.h  exampledictinfo.h  exampledictionary.h  history-private.h  history.h  installdictionary-private.h  installdictionary.h  installdictionarylist.h  io.h  kanjidictinfo.h  kanjidictionary.h  libwaei.h  morphology.h  preferences.h  query.h  range.h  regex.h  regexgroup.h  regroup.h  result.h  search.h  searchitem.h  unknowndictinfo.h  unknowndictionary.h  utilities.h  vocabulary.h  (+2 more)
src/schemas/: org.gnome.gwaei.gschema.xml
src/waei/: Makefile.am  application.c  console-callbacks.c  console-output.c  console.c  search-data.c  waei.c
src/waei/include/waei/: application-private.h  application.h  console-output.h  waei.h
