libraryincludedir = $(includedir)/libwaei
libraryinclude_HEADERS = dictionary.h dictionarylist.h dictinst.h dictinstlist.h history.h io.h libwaei.h morphology.h preferences.h query.h regex.h regexgroup.h result.h search.h utilities.h vocabularyitem.h vocabularylist.h

noinst_HEADERS = gettext.h dictionary-private.h
